Practice1/cloudformation/templates_refer/network.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Network module - VPC, Subnets, IGW, NAT Gateway, Route Tables

Parameters:
  ProjectName:
    Type: String
  VpcCidr:
    Type: String
    Default: 10.0.0.0/16
  PublicSubnetCidr:
    Type: String
    Default: 10.0.1.0/24
  PrivateSubnetCidr:
    Type: String
    Default: 10.0.2.0/24
  AvailabilityZone:
    Type: String
    Default: ap-southeast-1a

Resources:
  #  VPC  
  VPC:
    Type: AWS::EC2::VPC
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      CidrBlock:
        Ref: VpcCidr
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value:
            Fn::Sub: "${ProjectName}-vpc"

  #  Internet Gateway 
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      Tags:
        - Key: Name
          Value:
            Fn::Sub: "${ProjectName}-igw"

  IGWAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      VpcId:
        Ref: VPC
      InternetGatewayId:
        Ref: InternetGateway

  #  Subnets 
  PublicSubnet:
    Type: AWS::EC2::Subnet
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: PublicSubnetCidr
      AvailabilityZone:
        Ref: AvailabilityZone
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value:
            Fn::Sub: "${ProjectName}-public-subnet"

  PrivateSubnet:
    Type: AWS::EC2::Subnet
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: PrivateSubnetCidr
      AvailabilityZone:
        Ref: AvailabilityZone
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value:
            Fn::Sub: "${ProjectName}-private-subnet"

  #  NAT Gateway  
  NatEIP:
    Type: AWS::EC2::EIP
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    DependsOn: IGWAttachment
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value:
            Fn::Sub: "${ProjectName}-nat-eip"

  NatGateway:
    Type: AWS::EC2::NatGateway
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      AllocationId:
        Fn::GetAtt:
          - NatEIP
          - AllocationId
      SubnetId:
        Ref: PublicSubnet
      Tags:
        - Key: Name
          Value:
            Fn::Sub: "${ProjectName}-nat-gw"

  #  Route Tables 
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value:
            Fn::Sub: "${ProjectName}-public-rt"

  PublicRoute:
    Type: AWS::EC2::Route
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    DependsOn: IGWAttachment
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway

  PublicSubnetRTAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      SubnetId:
        Ref: PublicSubnet
      RouteTableId:
        Ref: PublicRouteTable

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value:
            Fn::Sub: "${ProjectName}-private-rt"

  PrivateRoute:
    Type: AWS::EC2::Route
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      RouteTableId:
        Ref: PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NatGateway

  PrivateSubnetRTAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      SubnetId:
        Ref: PrivateSubnet
      RouteTableId:
        Ref: PrivateRouteTable

Outputs:
  VpcId:
    Value:
      Ref: VPC
  PublicSubnetId:
    Value:
      Ref: PublicSubnet
  PrivateSubnetId:
    Value:
      Ref: PrivateSubnet
  NatGatewayId:
    Value:
      Ref: NatGateway
